<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_height"
        layout="@layout/register_bar" />

    <EditText
        android:id="@+id/et_publistTitle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        style="@style/tvMoneyStyle"
        android:hint="@string/work_publish_title_hint" 
        android:background="@null"/>

    <include
        layout="@layout/line_view" />

    <EditText
        android:id="@+id/et_publistContent"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:paddingTop="10dp"
        android:gravity="top"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/work_publish_content_hint"
        android:background="@null"
        android:maxLines="10"
         style="@style/tvMoneyStyle" />

    <include
        layout="@layout/line_view" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/img_addFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/approve_upload_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/img_addFile"
            android:text="@string/work_publish_loadfile" 
            style="@style/tvAddSchoolStyle"/>

        <TextView
            android:id="@+id/tvPublishAds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/work_publish_ads" 
            style="@style/tvPublishAds"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_publish_Step"
        style="@style/loginStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:background="@drawable/user_login_btn"
        android:text="@string/certification_step_next"
        android:layout_gravity="bottom"/>

</LinearLayout>