<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/li_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_height"
        layout="@layout/register_bar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:id="@+id/rl_certification"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:gravity="bottom"
                android:orientation="horizontal" >

                <TextView
                    style="@style/textViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/certification_company_name" />

                <ImageView
                    android:layout_width="0.8dp"
                    android:layout_height="20dp"
                    android:background="@color/color_login_default" />

                <EditText
                    android:id="@+id/et_companyName"
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:background="@null"
                    android:gravity="bottom"
                    android:hint="@string/certification_company_name_hint"
                    android:paddingBottom="2dp" >
                </EditText>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:gravity="bottom"
                android:orientation="horizontal" >

                <TextView
                    style="@style/textViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/certification_company_no" />

                <ImageView
                    android:layout_width="0.8dp"
                    android:layout_height="20dp"
                    android:background="@color/color_login_default" />

                <EditText
                    android:id="@+id/et_companyNo"
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:background="@null"
                    android:gravity="bottom"
                    android:hint="@string/certification_company_no_hint"
                    android:paddingBottom="2dp" >
                </EditText>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:gravity="bottom"
                android:orientation="horizontal" >

                <TextView
                    style="@style/textViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/certification_company_money" />

                <ImageView
                    android:layout_width="0.8dp"
                    android:layout_height="20dp"
                    android:background="@color/color_login_default" />

                <EditText
                    android:id="@+id/et_companyMoney"
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:background="@null"
                    android:gravity="bottom"
                    android:hint="@string/certification_company_money_hint"
                    android:paddingBottom="2dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:gravity="bottom"
                android:orientation="horizontal" >

                <TextView
                    style="@style/textViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/certification_company_faren_name" />

                <ImageView
                    android:layout_width="0.8dp"
                    android:layout_height="20dp"
                    android:background="@color/color_login_default" />

                <EditText
                    android:id="@+id/et_companyOwnerName"
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:background="@null"
                    android:gravity="bottom"
                    android:hint="@string/certification_company_faren_name_hint"
                    android:paddingBottom="2dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:gravity="bottom"
                android:orientation="horizontal" >

                <TextView
                    style="@style/textViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:gravity="bottom"
                    android:text="@string/certification_company_check" />

                <ImageView
                    android:layout_width="0.8dp"
                    android:layout_height="20dp"
                    android:background="@color/color_login_default" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tv_mainCheck"
                    style="@style/reg_send_code"
                    android:layout_width="90dp"
                    android:layout_height="20dp"
                    android:layout_marginRight="30dp"
                    android:text="@string/cerification_click_check" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/GRB2" />


            <TextView
                android:id="@+id/tv_certification_step1"
                style="@style/loginStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/user_login_btn"
                android:text="@string/certification_step_next" />
        </LinearLayout>
    </ScrollView>
     </RelativeLayout>
    <RelativeLayout
            android:id="@+id/rl_errorInfo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/nav_height"
            android:background="#a0000000"
            android:gravity="center_vertical" 
            android:visibility="gone"
            android:layout_alignParentTop="true">

            <TextView
                android:id="@+id/tvCamera"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/certificate_popwindow_error"
                android:textColor="@color/GRB6"
                android:textSize="@dimen/T7_14" />

            <ImageView
                android:id="@+id/img_certification_error"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="12dp"
                android:background="@drawable/delete_icon" />
        </RelativeLayout>
         </RelativeLayout>
</LinearLayout>