<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:weightSum="5" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4.5"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="83dp"
            android:layout_height="83dp"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="68dp"
            android:src="@drawable/login_img" />

        <LinearLayout
            android:id="@+id/li_user"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="bottom"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/user_icon" />

            <EditText
                android:id="@+id/et_userName"
                style="@style/editStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:gravity="bottom"
                android:text="2987910254@qq.com"
                android:hint="@string/enter_user_name_hint" >
            </EditText>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/line" />

        <LinearLayout
            android:id="@+id/li_pwd"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="bottom"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/reg_passward_icon" />

            <EditText
                android:id="@+id/et_userPwd"
                style="@style/editStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:gravity="bottom"
                android:hint="@string/user_pwd_hint"
                android:inputType="textPassword" 
                  android:text="123456">
            </EditText>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/line" />

        <TextView
            android:id="@+id/tv_login"
            style="@style/loginStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/user_login_btn"
            android:text="@string/user_login" />

        <TextView
            android:id="@+id/tv_forgetPwd"
            style="@style/findPwdStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/user_forget_pwd" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_registerUser"
        style="@style/findPwdStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:text="@string/user_register" />

</LinearLayout>